# opengl-physics

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml
dependencies/glad/: glad.h
shaders/: fragment.glsl  vertex.glsl
src/: glad.c  main.cpp
src/components/: components.hpp
src/controller/: app.cpp  app.hpp
src/entity/: ecs_manager.cpp  ecs_manager.hpp  entity_config.hpp  object_type.hpp
src/factories/: entity_manager.cpp  entity_manager.hpp  mesh_factory.cpp  mesh_factory.hpp  shader_factory.cpp  shader_factory.hpp
src/systems/: camera_system.cpp  camera_system.hpp  physics_system.cpp  physics_system.hpp  render_system.cpp  render_system.hpp
